nginx-configs-clean/traefik-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-host-service
  namespace: default
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nginx-host-service
  namespace: default
subsets:
  - addresses:
    - ip: 192.168.1.99
    ports:
    - port: 8080
      protocol: TCP
