nginx-configs-clean/traefik-catchall-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-host
  namespace: default
spec:
  type: ExternalName
  externalName: host.k3d.internal
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nginx-host
  namespace: default
subsets:
  - addresses:
    - ip: 192.168.1.99
    ports:
    - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-host-service
  namespace: default
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-catchall
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.priority: "1"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-host-service
            port:
              number: 8080
